--- a/src/index.html
+++ b/src/index.html
@@ -217,7 +217,7 @@
 
     <footer>
       <span>&#169; 2019 Exploring the world</span>
-      <a href="#" class="footer__btnSection" style="display: inline;">
+      <a href="#" class="footer__btnSection" style="display: none">
         <button>
           <img src="./img/footer-btn-arrow.png" alt=""></button></a>
     </footer>
