--- a/src/index.html
+++ b/src/index.html
@@ -233,9 +233,10 @@
 
       <footer>
         <span>&#169; 2019 Exploring the world</span>
-        <a href="#"><button class="footer__btnSection" style="display: none">
+        <form action="#" method="get"><button class="footer__btnSection" style="display: none">
           <img src="./img/footer-btn-arrow.png" alt="" />
-        </button></a>
+        </button></form>
+      
       </footer>
     </div>
     <script>
